<!--数据绑定根布局需要使用layout标签-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>
        <import type="com.practice.zengxiangge.mvvmdemo.UserBean" />
        <variable
            name="loginViewModel"
            type="com.practice.zengxiangge.mvvmdemo.LoginViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.practice.zengxiangge.mvvmdemo.LoginActivity">

        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />



            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@={loginViewModel.userBean.email}" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:text="@={loginViewModel.userBean.email}"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_username"
                        android:imeActionId="6"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@={loginViewModel.userBean.username}" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:text="@={loginViewModel.userBean.username}"/>

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionId="6"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@={loginViewModel.passWord}"/>

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/login_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/action_login"
                    android:textStyle="bold"
                    android:onClick="@{loginViewModel::onBtnClick}"/>

                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:text="@={loginViewModel.ObservableResultPrompt}"/>

                <Button
                    android:id="@+id/add_btn"
                    android:layout_width="300dp"
                    android:layout_height="80dp"
                    android:text="add TextView"
                    android:layout_marginBottom="10dp"
                    android:onClick="@{loginViewModel.onBtnClick}"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:context="@{loginViewModel.context}"
                    app:nameList="@{loginViewModel.nameList}">

                </LinearLayout>


            </LinearLayout>


    </LinearLayout>
</layout>